# bevy_mod_spatial_queries

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/: entities_in_radius.rs
src/: lib.rs  spatial_query.rs  spatial_query_iterator.rs
src/algorithms/: bvh.rs  mod.rs  naive.rs
