[package]
name = "bevy_mod_spatial_query"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ada Hieta <ada@hieta.fi>"]
description = "Spatially aware Queries for the Bevy game engine"
keywords = ["gamedev", "bevy", "spatial"]
categories = ["game-development"]
homepage = "https://github.com/Feilkin/bevy_mod_spatial_query"
repository = "https://github.com/Feilkin/bevy_mod_spatial_query"
readme = "README.md"

[dependencies]
bevy = { version = "0.15", default-features = false }

[dev-dependencies]
# more bevy features are needed for the examples
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "sysinfo_plugin",
    "bevy_ci_testing",
    "x11",
] }
# makes examples faster
[profile.dev]
opt-level = 3
lto = "off"